@@ -35,6 +35,8 @@
 #include <strings.h>
 #endif
 
+#include <stdlib.h>
+
 #include "mt19937ar.h"
 #define RAND_MAX 0xffffffff
 
