@@ -33,6 +33,16 @@
 #ifdef HAVE_FCNTL_H
 #include <fcntl.h>
 #endif
+#if TIME_WITH_SYS_TIME
+# include <sys/time.h>
+# include <time.h>
+#else
+# if HAVE_SYS_TIME_H
+#  include <sys/time.h>
+# else
+#  include <time.h>
+# endif
+#endif  /* TIME_WITH_SYS_TIME */
 
 #include <speex/speex.h>
 #include <speex/speex_header.h>
